--- a/judges.html
+++ b/judges.html
@@ -69,44 +69,126 @@
     
     <section id="judge&mentor" class="judge_mentor">
       <div container>
-      <div class="col-md-8 col-sm-11 text-center mx-auto">
-        <div class="section-title mb-5">
-          <h2 class="fs-1 fw-bold text-light text-center">
-            OUR JUDGES
-          </h2>
+        <div class="col-md-8 col-sm-11 text-center mx-auto">
+          <div class="section-title mb-5">
+            <h2 class="fs-1 fw-bold text-light text-center">
+              OUR JUDGES
+            </h2>
+          </div>
         </div>
-      </div>
 
-        <!-- ======================================= Balaena Quant ====================================-->
-        <div class="judges">
-          <div class="judge">
-            <div class="judge-image">
-                <img src="./assets/images/mentor-placeholder.svg" class="judge-background" alt="Judge">
-                <img src="./assets/images/balaena-liana.png" class="judge-profile" alt="Judge">
-            </div>
-            <div class="judge-info">
-                <h3 class="judge-name">Liana Ling</h3>
-                <p>Head of Balaena Quant's Algorithmic Trading Campus</p>
-            </div>
-          </div>      
-          <div class="judge">
-            <div class="judge-image">
-                <img src="./assets/images/mentor-placeholder.svg" class="judge-background" alt="Judge">
-                <img src="./assets/images/balaena-marcuslee.png" class="judge-profile" alt="Judge">
-            </div>
-            <div class="judge-info">
-                <h3 class="judge-name">Marcus Lee</h3>
-                <p>Head of the Department of Quantitative Development</p>
+        <section id="partition-tabs" class="partition-tabs">
+          <div class="container">
+            <div id="tabs-container" class="tabs d-flex">
+              <div class="tab active" data-target="all">All</div>
+              <div class="tab" data-target="company1">Balaena Quant</div>
+              <!-- <div class="tab" data-target="company2">Securities Commission Malaysia</div>
+              <div class="tab" data-target="company3">Grab</div>
+              <div class="tab" data-target="company4">NationGate</div>
+              <div class="tab" data-target="company5">Maxis</div> -->
+              <div class="tab" data-target="company6">Etiqa</div>
+              <!-- <div class="tab" data-target="company7">External</div> -->
             </div>
           </div>
-          <div class="judge">
-            <div class="judge-image">
-                <img src="./assets/images/mentor-placeholder.svg" class="judge-background" alt="Judge">
-                <img src="./assets/images/balaena-ngjunhan.png" class="judge-profile" alt="Judge">
+        </section>
+        <!-- ========================================== All ==============================================-->
+        <div id="all" class="mentor-list active">
+          <div class="judges">
+            <div class="judge">
+              <div class="judge-image">
+                  <img src="./assets/images/mentor-placeholder.svg" class="judge-background" alt="Judge">
+                  <img src="./assets/images/balaena-liana.png" class="judge-profile" alt="Judge">
+              </div>
+              <div class="judge-info">
+                  <h3 class="judge-name">Liana Ling</h3>
+                  <p>Head of Balaena Quant's Algorithmic Trading Campus</p>
+              </div>
+            </div>      
+            <div class="judge">
+              <div class="judge-image">
+                  <img src="./assets/images/mentor-placeholder.svg" class="judge-background" alt="Judge">
+                  <img src="./assets/images/balaena-marcuslee.png" class="judge-profile" alt="Judge">
+              </div>
+              <div class="judge-info">
+                  <h3 class="judge-name">Marcus Lee</h3>
+                  <p>Head of the Department of Quantitative Development</p>
+              </div>
             </div>
-            <div class="judge-info">
-                <h3 class="judge-name">Ng Jun Han</h3>
-                <p>Researcher for Machine Learning in Alpha Development</p>
+            <div class="judge">
+              <div class="judge-image">
+                  <img src="./assets/images/mentor-placeholder.svg" class="judge-background" alt="Judge">
+                  <img src="./assets/images/balaena-ngjunhan.png" class="judge-profile" alt="Judge">
+              </div>
+              <div class="judge-info">
+                  <h3 class="judge-name">Ng Jun Han</h3>
+                  <p>Researcher for Machine Learning in Alpha Development</p>
+              </div>
+            </div>          
+            <div class="judge">
+              <div class="judge-image">
+                  <img src="./assets/images/mentor-placeholder.svg" class="judge-background" alt="Judge">
+                  <img src="./assets/images/etiqa-Tan Wey Yang.jpg" class="judge-profile" alt="Judge">
+              </div>
+              <div class="judge-info">
+                  <h3 class="judge-name">Tan Wey Yang</h3>
+                  <p>Tech Lead DotNet Dev</p>
+              </div>
+            </div>      
+            <div class="judge">
+              <div class="judge-image">
+                  <img src="./assets/images/mentor-placeholder.svg" class="judge-background" alt="Judge">
+                  <img src="./assets/images/etiqa-Huzaifah Bin Dzulkifli.jpeg" class="judge-profile" alt="Judge">
+              </div>
+              <div class="judge-info">
+                  <h3 class="judge-name">Huzaifah Bin Dzulkifli</h3>
+                  <p>Tech Lead DotNet Dev</p>
+              </div>
+            </div>
+            <div class="judge">
+              <div class="judge-image">
+                  <img src="./assets/images/mentor-placeholder.svg" class="judge-background" alt="Judge">
+                  <img src="./assets/images/etiqa-Loo Kean Seng.png" class="judge-profile" alt="Judge">
+              </div>
+              <div class="judge-info">
+                  <h3 class="judge-name">Loo Kean Seng</h3>
+                  <p>Tech Lead Java Dev</p>
+              </div>
+            </div>  
+          </div>        
+        </div>
+
+        <!-- ======================================= Balaena Quant ====================================-->
+        <div id="company1" class="mentor-list">
+          <div class="judges">
+            <div class="judge">
+              <div class="judge-image">
+                  <img src="./assets/images/mentor-placeholder.svg" class="judge-background" alt="Judge">
+                  <img src="./assets/images/balaena-liana.png" class="judge-profile" alt="Judge">
+              </div>
+              <div class="judge-info">
+                  <h3 class="judge-name">Liana Ling</h3>
+                  <p>Head of Balaena Quant's Algorithmic Trading Campus</p>
+              </div>
+            </div>      
+            <div class="judge">
+              <div class="judge-image">
+                  <img src="./assets/images/mentor-placeholder.svg" class="judge-background" alt="Judge">
+                  <img src="./assets/images/balaena-marcuslee.png" class="judge-profile" alt="Judge">
+              </div>
+              <div class="judge-info">
+                  <h3 class="judge-name">Marcus Lee</h3>
+                  <p>Head of the Department of Quantitative Development</p>
+              </div>
+            </div>
+            <div class="judge">
+              <div class="judge-image">
+                  <img src="./assets/images/mentor-placeholder.svg" class="judge-background" alt="Judge">
+                  <img src="./assets/images/balaena-ngjunhan.png" class="judge-profile" alt="Judge">
+              </div>
+              <div class="judge-info">
+                  <h3 class="judge-name">Ng Jun Han</h3>
+                  <p>Researcher for Machine Learning in Alpha Development</p>
+              </div>
             </div>
           </div>
         </div>
@@ -120,7 +202,7 @@
             </div>
             <div class="judge-info">
                 <h3 class="judge-name">Mohamad Farook Naveer Mohideen</h3>
-                <p>Islamic finance, Capital Market & Fintech<br>019-373 1672</p>
+                <p>Islamic finance, Capital Market & Fintech</p>
             </div>
           </div>      
           <div class="judge">
@@ -130,7 +212,7 @@
             </div>
             <div class="judge-info">
                 <h3 class="judge-name">Nur Diyana Najwa Binti Mohd Affendi</h3>
-                <p>Islamic Finance & Fintech <br>013-4888941</p>
+                <p>Islamic Finance & Fintech</p>
             </div>
           </div>
           <div class="judge">
@@ -140,44 +222,46 @@
             </div>
             <div class="judge-info">
                 <h3 class="judge-name">Norlia Mat Saed</h3>
-                <p>Shariah & Islamic Finance<br>012-288 5019</p>
+                <p>Shariah & Islamic Finance</p>
             </div>
           </div> 
         </div> -->
 
         <!-- ========================================== Etiqa =========================================-->
-        <div class="judges">
-      <div class="judge">
-        <div class="judge-image">
-            <img src="./assets/images/mentor-placeholder.svg" class="judge-background" alt="Judge">
-            <img src="./assets/images/etiqa-Tan Wey Yang.jpg" class="judge-profile" alt="Judge">
-        </div>
-        <div class="judge-info">
-            <h3 class="judge-name">Tan Wey Yang</h3>
-            <p>Tech Lead DotNet Dev</p>
-        </div>
-      </div>      
-      <div class="judge">
-        <div class="judge-image">
-            <img src="./assets/images/mentor-placeholder.svg" class="judge-background" alt="Judge">
-            <img src="./assets/images/etiqa-Huzaifah Bin Dzulkifli.jpeg" class="judge-profile" alt="Judge">
-        </div>
-        <div class="judge-info">
-            <h3 class="judge-name">Huzaifah Bin Dzulkifli</h3>
-            <p>Tech Lead DotNet Dev</p>
-        </div>
-      </div>
-      <div class="judge">
-        <div class="judge-image">
-            <img src="./assets/images/mentor-placeholder.svg" class="judge-background" alt="Judge">
-            <img src="./assets/images/etiqa-Loo Kean Seng.png" class="judge-profile" alt="Judge">
-        </div>
-        <div class="judge-info">
-            <h3 class="judge-name">Loo Kean Seng</h3>
-            <p>Tech Lead Java Dev</p>
-        </div>
-      </div>
-        </div>
+          <div id="company6" class="mentor-list"> 
+            <div class="judges">
+              <div class="judge">
+                <div class="judge-image">
+                    <img src="./assets/images/mentor-placeholder.svg" class="judge-background" alt="Judge">
+                    <img src="./assets/images/etiqa-Tan Wey Yang.jpg" class="judge-profile" alt="Judge">
+                </div>
+                <div class="judge-info">
+                    <h3 class="judge-name">Tan Wey Yang</h3>
+                    <p>Tech Lead DotNet Dev</p>
+                </div>
+              </div>      
+              <div class="judge">
+                <div class="judge-image">
+                    <img src="./assets/images/mentor-placeholder.svg" class="judge-background" alt="Judge">
+                    <img src="./assets/images/etiqa-Huzaifah Bin Dzulkifli.jpeg" class="judge-profile" alt="Judge">
+                </div>
+                <div class="judge-info">
+                    <h3 class="judge-name">Huzaifah Bin Dzulkifli</h3>
+                    <p>Tech Lead DotNet Dev</p>
+                </div>
+              </div>
+              <div class="judge">
+                <div class="judge-image">
+                    <img src="./assets/images/mentor-placeholder.svg" class="judge-background" alt="Judge">
+                    <img src="./assets/images/etiqa-Loo Kean Seng.png" class="judge-profile" alt="Judge">
+                </div>
+                <div class="judge-info">
+                    <h3 class="judge-name">Loo Kean Seng</h3>
+                    <p>Tech Lead Java Dev</p>
+                </div>
+              </div>
+            </div>
+          </div>
 
         <!-- ========================================== Maxis =========================================-->
         <!-- <div class="judges">
@@ -188,7 +272,7 @@
             </div>
             <div class="judge-info">
                 <h3 class="judge-name">Mohammad Tariq Hussain</h3>
-                <p>Head of Machine Learning & Artificial Intelligence<br>014-6694270</p>
+                <p>Head of Machine Learning & Artificial Intelligence</p>
             </div>
           </div>
         </div> -->
@@ -202,7 +286,7 @@
             </div>
             <div class="judge-info">
                 <h3 class="judge-name">Chin Zhie Lun</h3>
-                <!-- <p>Head of Balaena Quant's Algorithmic Trading Campus<br>+6017-280 1215</p> --
+                <!-- <p>Head of Balaena Quant's Algorithmic Trading Campus</p> --
             </div>
           </div>      
           <div class="judge">
@@ -212,7 +296,7 @@
             </div>
             <div class="judge-info">
                 <h3 class="judge-name">Nurliyana Binti Roslan</h3>
-                <!-- <p>Head of the Department of Quantitative Development<br>+6016 306 6883</p> --
+                <!-- <p>Head of the Department of Quantitative Development</p> --
             </div>
           </div>
           <div class="judge">
@@ -222,7 +306,7 @@
             </div>
             <div class="judge-info">
                 <h3 class="judge-name">Ts. Asadullah Qamar Bhatti</h3>
-                <!-- <p>Researcher for Machine Learning in Alpha Development<br>+6011 6290 1803</p> --
+                <!-- <p>Researcher for Machine Learning in Alpha Development</p> --
             </div>
           </div>
         </div>
@@ -234,7 +318,7 @@
             </div>
             <div class="judge-info">
                 <h3 class="judge-name">Tan Guang Yi</h3>
-                <!-- <p>Head of Balaena Quant's Algorithmic Trading Campus<br>+6017-280 1215</p> --
+                <!-- <p>Head of Balaena Quant's Algorithmic Trading Campus</p> --
             </div>
           </div>      
           <div class="judge">
@@ -244,14 +328,14 @@
             </div>
             <div class="judge-info">
                 <h3 class="judge-name">Darveen Vijayan</h3>
-                <!-- <p>Head of the Department of Quantitative Development<br>+6016 306 6883</p> --
+                <!-- <p>Head of the Department of Quantitative Development</p> --
             </div>
           </div>
           
         </div> -->
-      </div>
-      </section>
-
+      </div>    
+    </section>
+    <script src="./assets/js/judge.js"></script>
 </body>
 
 </html>
