--- a/mentors.html
+++ b/mentors.html
@@ -197,7 +197,7 @@
               </div>
               <div class="judge-info">
                   <h3 class="judge-name">Mentor2.1</h3>
-                  <p>Head of Balaena Quant's Algorithmic Trading Campus<br>+6017-280 1215</p>
+                  <p>Head of Balaena Quant's Algorithmic Trading Campus</p>
               </div>
             </div>
             <div class="judge">
@@ -207,7 +207,7 @@
               </div>
               <div class="judge-info">
                   <h3 class="judge-name">Mentor 2.2</h3>
-                  <p>Head of the Department of Quantitative Development<br>+6016 306 6883</p>
+                  <p>Head of the Department of Quantitative Development</p>
               </div>
             </div>
             <div class="judge">
@@ -217,7 +217,7 @@
               </div>
               <div class="judge-info">
                   <h3 class="judge-name">Mentor 2.3</h3>
-                  <p>Researcher for Machine Learning in Alpha Development<br>+6011 6290 1803</p>
+                  <p>Researcher for Machine Learning in Alpha Development</p>
               </div>
             </div>
           </div>
