added jantzen and printcious as bik

--- a/index.html
+++ b/index.html
@@ -418,13 +418,22 @@
                 <img src="assets\images\zus.png" />
               </div>
               <div class="item itemLeft item3">
-                <img src="assets\images\vida.png" />
+                <img src="assets\images\printcious.png" />
               </div>
               <div class="item itemLeft item4">
-                <img src="assets\images\zus.png" />
+                <img src="assets/images/Jantzen.jpg" />
               </div>
               <div class="item itemLeft item5">
                 <img src="assets\images\vida.png" />
+              </div>
+              <div class="item itemLeft item6">
+                <img src="assets\images\zus.png" />
+              </div>
+              <div class="item itemLeft item7">
+                <img src="assets\images\printcious.png" />
+              </div>
+              <div class="item itemLeft item8">
+                <img src="assets\images\Jantzen.jpg" />
               </div>
             </div>
 
