Add carousel indicator to media partner

--- a/index.html
+++ b/index.html
@@ -448,8 +448,59 @@
         <h2 class="section_title text-white m-4">MEDIA PARTNERS</h2>
       </div>
 
-      <div class="container-fluid container h-100">
+      <div id="media-partner-container" class="container-fluid container h-100">
         <div id="media-partner" class="carousel slide align-content-center h-100" data-bs-ride="carousel">
+          <ol class="carousel-indicators" class="bg-white">
+            <li data-bs-target="#media-partner" data-bs-slide-to="0" class="active "></li>
+            <li data-bs-target="#media-partner" data-bs-slide-to="1" class=""></li>
+            <li data-bs-target="#media-partner" data-bs-slide-to="2" class=""></li>
+            <li data-bs-target="#media-partner" data-bs-slide-to="3" class=""></li>
+            <li data-bs-target="#media-partner" data-bs-slide-to="4" class=""></li>
+            <li data-bs-target="#media-partner" data-bs-slide-to="5" class=""></li>
+            <li data-bs-target="#media-partner" data-bs-slide-to="6" class=""></li>
+            <li data-bs-target="#media-partner" data-bs-slide-to="7" class=""></li>
+            <li data-bs-target="#media-partner" data-bs-slide-to="8" class=""></li>
+            <li data-bs-target="#media-partner" data-bs-slide-to="9" class=""></li>
+            <li data-bs-target="#media-partner" data-bs-slide-to="10" class=""></li>
+            <li data-bs-target="#media-partner" data-bs-slide-to="11" class=""></li>
+            <li data-bs-target="#media-partner" data-bs-slide-to="12" class=""></li>
+            <li data-bs-target="#media-partner" data-bs-slide-to="13" class=""></li>
+            <li data-bs-target="#media-partner" data-bs-slide-to="14" class=""></li>
+            <li data-bs-target="#media-partner" data-bs-slide-to="15" class=""></li>
+            <li data-bs-target="#media-partner" data-bs-slide-to="16" class=""></li>
+            <li data-bs-target="#media-partner" data-bs-slide-to="17" class=""></li>
+            <li data-bs-target="#media-partner" data-bs-slide-to="18" class=""></li>
+            <li data-bs-target="#media-partner" data-bs-slide-to="19" class=""></li>
+            <li data-bs-target="#media-partner" data-bs-slide-to="20" class=""></li>
+            <li data-bs-target="#media-partner" data-bs-slide-to="21" class=""></li>
+            <li data-bs-target="#media-partner" data-bs-slide-to="22" class=""></li>
+            <li data-bs-target="#media-partner" data-bs-slide-to="23" class=""></li>
+            <li data-bs-target="#media-partner" data-bs-slide-to="24" class=""></li>
+            <li data-bs-target="#media-partner" data-bs-slide-to="25" class=""></li>
+            <li data-bs-target="#media-partner" data-bs-slide-to="26" class=""></li>
+            <li data-bs-target="#media-partner" data-bs-slide-to="27" class=""></li>
+            <li data-bs-target="#media-partner" data-bs-slide-to="28" class=""></li>
+            <li data-bs-target="#media-partner" data-bs-slide-to="29" class=""></li>
+            <li data-bs-target="#media-partner" data-bs-slide-to="30" class=""></li>
+            <li data-bs-target="#media-partner" data-bs-slide-to="31" class=""></li>
+            <li data-bs-target="#media-partner" data-bs-slide-to="32" class=""></li>
+            <li data-bs-target="#media-partner" data-bs-slide-to="33" class=""></li>
+            <li data-bs-target="#media-partner" data-bs-slide-to="34" class=""></li>
+            <li data-bs-target="#media-partner" data-bs-slide-to="35" class=""></li>
+            <li data-bs-target="#media-partner" data-bs-slide-to="36" class=""></li>
+            <li data-bs-target="#media-partner" data-bs-slide-to="37" class=""></li>
+            <li data-bs-target="#media-partner" data-bs-slide-to="38" class=""></li>
+            <li data-bs-target="#media-partner" data-bs-slide-to="39" class=""></li>
+            <li data-bs-target="#media-partner" data-bs-slide-to="40" class=""></li>
+            <li data-bs-target="#media-partner" data-bs-slide-to="41" class=""></li>
+            <li data-bs-target="#media-partner" data-bs-slide-to="42" class=""></li>
+            <li data-bs-target="#media-partner" data-bs-slide-to="43" class=""></li>
+            <li data-bs-target="#media-partner" data-bs-slide-to="44" class=""></li>
+            <li data-bs-target="#media-partner" data-bs-slide-to="45" class=""></li>
+            <li data-bs-target="#media-partner" data-bs-slide-to="46" class=""></li>
+            <li data-bs-target="#media-partner" data-bs-slide-to="47" class=""></li>
+          </ol>
+
           <div id="media-partner-carousel" class="carousel-inner container h-100" role="listbox"></div>
   
           <a class="carousel-control-prev" href="#media-partner" role="button" data-bs-slide="prev">
