--- a/judges.html
+++ b/judges.html
@@ -267,7 +267,7 @@
             <div class="judge">
               <div class="judge-image">
                   <img src="./assets/images/mentor-placeholder.svg" class="judge-background" alt="Judge">
-                  <img src="./assets/images/ext-tanguangyi.jpeg" class="judge-profile" alt="Judge">
+                  <img src="./assets/images/ext-tanguangyi.jpg" class="judge-profile" alt="Judge">
               </div>
               <div class="judge-info">
                   <h3 class="judge-name">Tan Guang Yi</h3>
@@ -594,7 +594,7 @@
             <div class="judge">
               <div class="judge-image">
                   <img src="./assets/images/mentor-placeholder.svg" class="judge-background" alt="Judge">
-                  <img src="./assets/images/ext-tanguangyi.jpeg" class="judge-profile" alt="Judge">
+                  <img src="./assets/images/ext-tanguangyi.jpg" class="judge-profile" alt="Judge">
               </div>
               <div class="judge-info">
                   <h3 class="judge-name">Tan Guang Yi</h3>
