--- a/judges.html
+++ b/judges.html
@@ -347,7 +347,7 @@
             <div class="judge">
               <div class="judge-image">
                 <img src="./assets/images/mentor-placeholder.svg" class="judge-background" alt="Judge">
-                <img src="./assets/images/ext-ngjiunn..JPG" class="judge-profile" alt="Judge"> 
+                <img src="./assets/images/ext-ngjiunn.JPG" class="judge-profile" alt="Judge"> 
               </div>
               <div class="judge-info">
                 <h3 class="judge-name">Ng Jiunn</h3>
@@ -674,7 +674,7 @@
             <div class="judge">
               <div class="judge-image">
                 <img src="./assets/images/mentor-placeholder.svg" class="judge-background" alt="Judge">
-                <img src="./assets/images/ext-ngjiunn..JPG" class="judge-profile" alt="Judge"> 
+                <img src="./assets/images/ext-ngjiunn.JPG" class="judge-profile" alt="Judge"> 
               </div>
               <div class="judge-info">
                 <h3 class="judge-name">Ng Jiunn</h3>
