fix submission page

--- a/submission.html
+++ b/submission.html
@@ -26,6 +26,7 @@
         <div class="submit-form submit-form2">
             <div class="form-box-submit">
                 <h1 class="form-item-submit form-title-submit">PRELIMINARY SUBMISSION</h1>
+                <p1 class="textpara">You can only submit once</p1>
                 <div class="input-box-submit">
                     <label for="group-name" class="form-label">Group Name</label>
                     <div class="dropdown">
