--- a/submission.html
+++ b/submission.html
@@ -29,18 +29,13 @@
                 <div class="input-box-submit">
                     <label for="group-name" class="form-label">Group Name</label>
                     <div class="dropdown">
-                        <input id="submit-groupname-input" class="group-name-input submit-input form-item-submit" type="text" name="group-name" placeholder="Select Team"/>
-                        <div id="dropdown_list" class="dropdown_list">
-                            <!-- Can also add team name from firestore database -->
-                            <div class="dropdown_item" data-value="t1">Team 1</div>
-                            <div class="dropdown_item" data-value="t2">Team 2</div>
-                            <div class="dropdown_item" data-value="t3">Team 3</div>
-                            <div class="dropdown_item" data-value="t4">Team 4</div>
+                        <input id="submit-groupname-input" class="group-name-input submit-input form-item-submit" type="text" name="group-name"/>
+                        <div id="dropdown_list" class="dropdown_list">>
                         </div>
                     </div>
                 </div>
                 <div class="input-box-submit">
-                    <label for="file-upload" class="form-label">Gdrive Link</label>
+                    <label for="file-upload" class="form-label">Public Github Repository Link</label>
                     <input class="link-input submit-input form-item-submit" type="url"/>
                 </div>
                 <button class="submit-btn form-item-submit" type="submit">Submit</button>
