add domain number

--- a/submission.html
+++ b/submission.html
@@ -34,6 +34,10 @@
                     </div>
                 </div>
                 <div class="input-box-submit">
+                    <label for="domain-number" class="form-label">Domain Number</label>
+                    <input class="domain-input submit-input form-item-submit" type="url"/>
+                </div>
+                <div class="input-box-submit">
                     <label for="file-upload" class="form-label">Public Github Repository Link</label>
                     <input class="link-input submit-input form-item-submit" type="url"/>
                 </div>
