--- a/judges.html
+++ b/judges.html
@@ -67,8 +67,8 @@
         </nav>
       </section>
     
-    <section id="judge&mentor" class="judge_mentor">
-      <div container>
+    <section id="judges" class="judge_mentor">
+      <div class="container">
         <div class="col-md-8 col-sm-11 text-center mx-auto">
           <div class="section-title mb-5">
             <h2 class="fs-1 fw-bold text-light text-center">
@@ -715,6 +715,11 @@
         </div>
       </div>    
     </section>
+
+    <!-- RETURN TO TOP BUTTON -->
+    <a class="go-top hidden"
+      ><i class="fa fa-angle-up" style="color: white"></i
+    ></a>
     <script src="./assets/js/judge.js"></script>
 </body>
 
