--- a/index.html
+++ b/index.html
@@ -273,21 +273,27 @@
 
         <div class="prizepool_section">
           <div class="prizepool section_title mt-5 text-center fs-1 fw-bold">PRIZE POOL</div>
-          <!-- <div class="prizepool section_subtitle">
-            Up to <span>RM 20K</span> for all domains!
-          </div> -->
+          <div class="prizepool section_subtitle">
+            Up to <span>RM 52K</span> for three domains!
+          </div>
           <div class="prizepool_container" id="prizepool_container">
-            <div class="prizepool_award second" id="gold">
-              <img src="assets/images/2nd.svg" alt="" class="tier" />
-              <p class="amount_second">TBC</p>
+            <div class="allPrize">
+              <img src="assets/images/allPrize.png" alt="" class="tier" />
             </div>
-            <div class="prizepool_award first" id="diamond">
-              <img src="assets/images/champ.svg" alt="" class="tier" />
-              <p class="amount_first">TBC</p>
+            <div class="prizepool_award first">
+              <img src="assets/images/champ.png" alt="" class="tier" />
             </div>
-            <div class="prizepool_award third" id="silver">
-              <img src="assets/images/3rd.svg" alt="" class="tier" />
-              <p class="amount_third">TBC</p>
+            <div class="prizepool_award second">
+              <img src="assets/images/2nd.png" alt="" class="tier" />
+            </div>
+            <div class="prizepool_award third">
+              <img src="assets/images/3rd.png" alt="" class="tier" />
+            </div>
+            <div class="prizepool_award fourFifth">
+              <img src="assets/images/4th.png" alt="" class="tier" />
+            </div>
+            <div class="prizepool_award fourFifth">
+              <img src="assets/images/5th.png" alt="" class="tier" />
             </div>
           </div>
         </div>
