removed printcious from sponsors

--- a/index.html
+++ b/index.html
@@ -418,21 +418,15 @@
                 <img src="assets\images\zus.png" />
               </div>
               <div class="item itemLeft item3">
-                <img src="assets\images\printcious.png" />
+                <img src="assets\images\Jantzen.jpg" />
               </div>
               <div class="item itemLeft item4">
-                <img src="assets/images/Jantzen.jpg" />
+                <img src="assets/images/vida.png" />
               </div>
               <div class="item itemLeft item5">
-                <img src="assets\images\vida.png" />
-              </div>
-              <div class="item itemLeft item6">
                 <img src="assets\images\zus.png" />
               </div>
-              <div class="item itemLeft item7">
-                <img src="assets\images\printcious.png" />
-              </div>
-              <div class="item itemLeft item8">
+              <div class="item itemLeft item6">
                 <img src="assets\images\Jantzen.jpg" />
               </div>
             </div>
