--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
         <li class="nav-item">
           <a href="#faq" class="nav-link">FAQ</a>
         </li>
+        <li class="nav-item">
+          <a href="/merchandise" class="nav-link"> Merchandise</a>
+        </li>
         <!-- Placeholder for login/logout -->
         <li class="nav-item" id="logged-out">
           <a href="/login" class="nav-link">Login</a>
