refactor login/logout navigation structure

--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
         <!-- Placeholder for login/logout -->
         <li class="nav-item" id="logged-out">
           <a href="/login" class="nav-link">Login</a>
-          <!-- <li class="nav-item d-none" id="logged-in-submission">
-            <a href="/submission" class="nav-link">Submission</a>
-        </li> -->
+          <li class="nav-item d-none" id="logged-in-submission">
+            <!-- <a href="/submission" class="nav-link">Submission</a> -->
+        </li>
         <li class="nav-item d-none" id="logged-in">
           <span class="nav-link">Welcome, <span id="user-email"></span></span>
         </li>
