--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
         <!-- Placeholder for login/logout -->
         <li class="nav-item" id="logged-out">
           <a href="/login" class="nav-link">Login</a>
-          <!-- <li class="nav-item d-none" id="logged-in-submission">
-            <a href="/submission" class="nav-link">Submission</a>
-        </li> -->
+          <li class="nav-item d-none" id="logged-in-submission">
+            <a id="submission" type="button" class="nav-link">Submission</a>
+        </li> 
         <li class="nav-item d-none" id="logged-in">
           <span class="nav-link">Welcome, <span id="user-email"></span></span>
         </li>
@@ -1271,7 +1271,7 @@
     ></a>
 
     <!-- Link to main.js file -->
-    <script src="./assets/js/main.js"></script>
+    <script type="module" src="./assets/js/main.js"></script>
     <script src="./assets/js/bootstrap.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="./assets/js/jquery.js"></script>
