--- a/index.html
+++ b/index.html
@@ -69,21 +69,21 @@
         <li class="nav-item">
           <a href="#about-us" class="nav-link">About Us</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a href="#overview" class="nav-link">Overview</a>
-        </li>
-        <li class="nav-item">
+        </li> -->
+        <!-- <li class="nav-item">
           <a href="#timeline" class="nav-link">Timeline</a>
-        </li>
+        </li> -->
         <li class="nav-item">
             <a href="/judges" class="nav-link"> Judges</a>
         </li>
         <li class="nav-item">
           <a href="/mentors" class="nav-link"> Mentors</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a href="#faq" class="nav-link">FAQ</a>
-        </li>
+        </li> -->
         <li class="nav-item">
           <a href="/merchandise" class="nav-link"> Merchandise</a>
         </li>
