--- a/submission.html
+++ b/submission.html
@@ -30,16 +30,16 @@
                 <div class="input-box-submit">
                     <label for="group-name" class="form-label">Group Name</label>
                     <div class="dropdown">
-                        <input id="submit-groupname-input" class="group-name-input submit-input form-item-submit" type="text" name="group-name"/>
+                        <input id="submit-groupname-input" class="group-name-input submit-input form-item-submit" type="text" name="group-name" placeholder="e.g. Group 1"/>
                     </div>
                 </div>
                 <div class="input-box-submit">
                     <label for="domain-number" class="form-label">Domain Number</label>
-                    <input class="domain-input submit-input form-item-submit" type="url"/>
+                    <input class="domain-input submit-input form-item-submit" type="url" placeholder="e.g. 1/2/3"/>
                 </div>
                 <div class="input-box-submit">
                     <label for="file-upload" class="form-label">Prototype Link</label>
-                    <input class="link-input submit-input form-item-submit" type="url"/>
+                    <input class="link-input submit-input form-item-submit" type="url" placeholder="https://github.com/..."/>
                 </div>
                 <button class="submit-btn form-item-submit" type="submit">Submit</button>
             </div>
